--- a/app/src/main/res/layout/item_budget_card.xml
+++ b/app/src/main/res/layout/item_budget_card.xml
@@ -30,6 +30,18 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Groceries"/>
 
+        <TextView
+            android:id="@+id/budgetAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/budgetNameText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/budgetNameText"
+            tools:text="100.00 USD" />
+
         <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/budgetProgress"
             android:layout_width="0dp"
